# afk

./:  thinking_memo.txt  .gitignore  manage.py  memo.py  memo2.py  package-lock.json  package.json  pyproject.toml  test.py  メモ.txt
accounts/: adapter.py  admin.py  middleware.py  models.py  password_validation.py  serializers.py  test.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210623_1314.py  0002_user_deleted_at.py  0003_auto_20211005_1519.py  0003_auto_20211125_2032.py
afk/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.js  package-lock.json  package.json  test.ts  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  export.ts  main.ts  shims-vue.d.ts  test.ts
pve_comp/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
pve_comp/migrations/: 0001_initial.py  0002_auto_20210414_2146.py  0002_auto_20210503_0151.py  0002_chapterstage_username.py  0002_remove_chapterstage_uploaded_image.py  0003_auto_20210419_0628.py  0003_auto_20210425_0927.py  0003_auto_20210602_0415.py  0003_chapterstage_uploaded_image.py  0004_auto_20210419_0846.py
react-frontend/: .eslintrc.json  package-lock.json  package.json
react-frontend/src/: App.tsx
relic_calculator/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
relic_calculator/migrations/: 0001_initial.py  0002_relic_icon.py  0003_auto_20220111_0050.py
templates/index/: base.html  index.html
templates/pve_comp/: pve_comp.html  result.html  upload.html
translate/: apps.py  urls.py  views.py
(+28 files in other folders)
