[tool.poetry]
name = "virtual"
version = "0.1.0"
description = ""
authors = ["todo <chappy06060606@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"